static/css/style.css
:root {
    --orange: #FCA311;
    /* color: var(--orange); */
    --blue: #023047;
    /* color: var(--blue); */
    --grey: #E5E5E5;
    /* color: var(--grey); */
    --light-blue: #8ecae6;
    /* color: var(--light-blue); */
    --teal: #219ebc;
    /* color: var(--teal); */
    --white: #FFFFFF;
    /* color: var(--white); */
    --black: #000000;
    /* color: var(--black); */
    --youtube: #FF0000;
    /* color: var(--youtube); */
    --facebook: #4267B2;
    /* color: var(--facebook); */
    --instagram: #fbad50;
    /* color: var(--instagram); */
    --twitter: #1DA1F2;
    /* color: var(--twitter); */
    --AccentTransparent: rgba(241, 241, 241, 0.637);
    /* color: var(--AccentTransparent); */
}

/* General */
.blue-section {
    background-color: var(--blue);
}

.grey-section {
    background-color: var(--grey);
}

/* Header */
nav ul a {
    font-size: 20px;
}

a.brand-logo {
    font-size: 36px;
}

nav ul a,
a.brand-logo,
ul h4 {
    color: var(--orange);
}

nav ul a:hover {
    color: var(--white);
}

nav a,
nav h4 {
    color: var(--orange);
}

/* Flashed Messages */
.flashes h4 {
    line-height: 2;
    color: var(--blue);
}

.flashed-container {
    background-color: var(--orange);
}

/* Form - Sing UP Page */
form i {
    color: var(--orange);
}

form i:hover {
    color: var(--blue);
}

.sign-up-button {
    padding: 20px 10px 20px 10px;
    border-radius: 10px;
    background-color: var(--blue);
    color: var(--orange);
    font-weight: 700;
    font-size: 16px;
    margin-top: 30px;
}

.sign-up-button:hover {
    background-color: var(--orange);
    color: var(--blue);
    cursor: pointer;
}

/* Properties  */
.card .card-reveal {
    background-color: var(--grey);
}

.card .card-title {
    color: var(--orange);
}

.card-reveal p {
    color: var(--blue)
}

.property-card {
    border-radius: 5px;
}

/* LOG IN PAGE  */
.register-link,
.reminder {
    font-size: 18px;
    font-weight: 700;
}

.register-link {
    color: var(--teal);
    border-bottom: 5px solid var(--orange);
}

.register-link:hover {
    color: var(--orange);
}

/* ADD PROPERTY PAGE  */
.property-header {
    border-radius: 20px;
    margin-top: 20px;
    padding-bottom: 20px;
    background-color: transparent;
    background-image: url(/static/images/add-property-heading.png);
}

.form-container img,
.property-header img {
    width: 50%;
    padding-top: 30px;
    padding-left: 20px;
}

.property-header h1 {
    font-size: 30px;
}

.add-resource-heading {
    padding-top: 30px;
    padding-bottom: 30px;
    padding-left: 20px;
    background-color: var(--AccentTransparent);
    border-radius: 20px;
    padding-right: 20px;
    color: var(--blue);
}

.general-button {
    padding: 18px 20px 20px;
    border-radius: 10px;
    background-color: var(--blue);
    color: var(--orange);
    font-weight: 600;
    font-size: 16px;
    margin-top: 10px;
    margin-right: 10px;
}

.general-button:hover {
    background-color: var(--orange);
    color: var(--blue);
    border: 1px solid var(--blue);
}

.cancel-button {
    padding: 18px 20px 20px;
    border-radius: 10px;
    background-color: var(--youtube);
    color: var(--blue);
    font-weight: 600;
    font-size: 16px;
    margin-top: 10px;
    margin-right: 10px;
}

.cancel-button:hover {
    background-color: var(--black);
    color: var(--youtube);
}

.input-field .helper-text {
    font-size: 10px;
    color: var(--teal);
    font-style: italic;
}

.field-row {
    background-color: var(--grey);
    border-radius: 10px;
    padding-top: 10px
}

.material-icons {
    font-size: 40px;
    padding-top: 10px;
}

/* Bookmark  */
.btn-floating {
    background-color: var(--blue);
}

.btn-floating:hover {
    background-color: var(--blue);
}


/* Footer - Social Media  */
.social-media .icon {
    font-size: 20px;
    padding-right: 20px;
}

footer a .fa-youtube.icon {
    color: var(--youtube);
}

footer a .fa-facebook.icon {
    color: var(--facebook);
}

footer a .fa-instagram.icon {
    color: var(--instagram);
}

footer a .fa-twitter.icon {
    color: var(--twitter);
}

footer .copyright {
    color: var(--red)
}

